@@ -31,9 +31,31 @@
 
 G_BEGIN_DECLS
 
-void rsvg_cairo_render_path (RsvgDrawingCtx *ctx, const RsvgBpathDef * path);
-void rsvg_cairo_render_image (RsvgDrawingCtx *ctx, const GdkPixbuf * img, 
-							  double x, double y, double w, double h);
+void
+rsvg_cairo_render_path (RsvgDrawingCtx *ctx,
+						const RsvgBpathDef * path);
+
+void
+rsvg_cairo_render_image (RsvgDrawingCtx *ctx,
+						 const GdkPixbuf *img, 
+						 double x, double y, double w, double h);
+
+void
+rsvg_cairo_push_discrete_layer (RsvgDrawingCtx *ctx);
+
+void
+rsvg_cairo_pop_discrete_layer (RsvgDrawingCtx *ctx);
+
+void 
+rsvg_cairo_add_clipping_rect (RsvgDrawingCtx *ctx,
+							  double x, double y,
+							  double width, double height);
+
+void * 
+rsvg_cairo_get_image_of_node (RsvgDrawingCtx *ctx,
+							  RsvgNode       *drawable,
+							  double          width,
+							  double          height);
 
 G_END_DECLS
 
